--- a/main.html
+++ b/main.html
@@ -1,16 +1,46 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Architecture</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+    <div class="container">
+        <!-- Main Image -->
+        <div class="imageContainer">
+            <img src="https://source.unsplash.com/1100x400/?architecture" alt="Architectural Design">
+        </div>
 
+        <!-- Table -->
+        <table>
+            <tr>
+                <td class="side-image"><img src="https://source.unsplash.com/200x200/?building" alt="Building Image"></td>
+                <td class="text-content">
+                    <h3>Unit #5 - Floor Plans</h3>
+                    <p>A. Kitchen</p>
+                    <p>B. Bathroom</p>
+                    <p>C. Using "Slabs"</p>
+                    <p>D. Georgian Home</p>
+                    <p>E. Sketching Assignment #5</p>
+                </td>
+                <td class="side-image"><img src="https://source.unsplash.com/200x200/?spiral-stairs" alt="Stairs Image"></td>
+            </tr>
+            <tr>
+                <td class="side-image"><img src="https://source.unsplash.com/200x200/?modern-home" alt="Modern Home"></td>
+                <td class="text-content">
+                    <h2>Objective</h2>
+                    <p>Discuss factors that are important in the design of bedrooms. Plan the size and location of closets for a typical residence. Plan a furniture arrangement for a room. Implement important design considerations for bathrooms. Plan a bathroom that follows solid design principles.</p>
+                    <p>Plan the service area of a home by applying good design principles. Design a functional kitchen to meet a family’s needs. Select kitchen appliances that are appropriate for a design. Plan an efficient clothes care center.</p>
+                </td>
+                <td class="side-image">
+                    <h3>Green Floor</h3>
+                    <p>FreeGreen.com offers both sponsored and non-sponsored floor plans. Their goal is to provide consumers with free solutions to their green architectural needs.</p>
+                    <a href="#">Learn More</a>
+                </td>
+            </tr>
+        </table>
+    </div>
 </body>
-
 </html>
